--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^6.3.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "sass": "^1.54.5",
     "web-vitals": "^2.1.4"
   },
