--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "aos": "^3.0.0-beta.6",
     "dotenv": "^16.0.2",
     "react": "^18.2.0",
@@ -16,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
     "sass": "^1.54.5",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-hash-link": "^2.4.5"
   }
 }
