--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.7.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@lottiefiles/dotlottie-react": "^0.12.2",
+    "@mui/icons-material": "^6.4.1",
+    "@mui/material": "^6.4.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +18,7 @@
     "@types/react-dom": "^18.0.10",
     "aos": "^3.0.0-beta.6",
     "dotenv": "^16.0.2",
+    "lucide-react": "^0.474.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -48,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/react-router-hash-link": "^2.4.5"
   }
 }
